Fix extra gap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,7 +121,6 @@ svg {
   margin-left: auto; 
   margin-right: 0;
   gap: 1.8rem;
-  padding-right: 0.8rem;
 }
 
 .header-on-dark {
